Explore Channels Follow Unfollow Button V-Align Fix

--- a/app/webroot/css/business/dashboard/custom.css
+++ b/app/webroot/css/business/dashboard/custom.css
@@ -106,3 +106,7 @@ body {
 {
     overflow: hidden;
 }
+
+.followcolumn {
+    padding-top: 9px;
+}
